api2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api2-service
  labels:
    app: api2
spec:
  type: ClusterIP
  ports:
  - port: 5100
    targetPort: 5100
    protocol: TCP
    name: http
  selector:
    app: api2
