web2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2-service
  labels:
    app: web2
spec:
  type: ClusterIP
  ports:
  - port: 31000
    targetPort: 31000
    protocol: TCP
    name: http
  selector:
    app: web2
